--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "alloy",
+  "name": "alloy-tools",
   "main": "./lib/index",
   "version": "0.0.0",
-  "description": "A short description of your package",
+  "description": "Editor tools for the Alloy modeling language",
   "keywords": [
+      "alloy",
+      "modeling"
   ],
   "activationHooks": ["alloy:grammar-used"],
-  "repository": "https://github.com/atom/alloy",
+  "repository": "https://github.com/atdyer/atom-alloy.git",
   "license": "MIT",
   "engines": {
-    "atom": ">=1.0.0 <2.0.0",
-    "python": "2.7"
+    "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
     "d3-selection": "1.3.0",
